z-index fixes for mobile menu and popups

--- a/dev/scss/layout/header.scss
+++ b/dev/scss/layout/header.scss
@@ -1,3 +1,8 @@
+// Sticky Header z-index Override
+.shopify-section-header-sticky {
+    z-index: 9999999999 !important;
+}
+
 header {
     &.header {
         padding: 0px !important;
